[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Art/Chest/chest_closed.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Chest/chest_opened.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Chest/radial_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Chest/radial_bar.png" type="Texture" id=4]
[ext_resource path="res://Game/Treasure/TreasureChest/TreasureChest.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sound/SoundEffects/chest_opening.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "opened",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.81653, 8.09258 )

[node name="TreasureChest" type="KinematicBody2D" groups=[
"Treasure",
]]
position = Vector2( 73.705, 222 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "closed"

[node name="RadialProgress" type="TextureProgress" parent="."]
margin_left = 8.6123
margin_top = -27.0412
margin_right = 194.612
margin_bottom = 158.959
rect_scale = Vector2( 0.1, 0.1 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.166855, 2.16912 )
shape = SubResource( 2 )

[node name="UpdateProgress" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ChestOpeningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="UpdateProgress" to="." method="_on_UpdateProgress_timeout"]
